--- a/20252026.Rmd
+++ b/20252026.Rmd
@@ -28,31 +28,31 @@ output:
 
 # Location
 
-**Paisley Campus, room** *TBC* or **online.** Click here to join: [<img src="teams.svg" alt="Join us here"  height="32"/>](https://teams.microsoft.com/l/team/19%3AVgmCyqnnetwBheHqzKxSGVjojm8Wf2At8_X9DBkk2UM1%40thread.tacv2/conversations?groupId=4fee47e7-661e-4b52-900c-11325d0ea3ac&tenantId=f89944b7-4a4e-4ea7-9156-3299f3411647)
+**Paisley Campus** or **online.** Click here to join: [<img src="teams.svg" alt="Join us here"  height="32"/>](https://teams.microsoft.com/l/team/19%3AVgmCyqnnetwBheHqzKxSGVjojm8Wf2At8_X9DBkk2UM1%40thread.tacv2/conversations?groupId=4fee47e7-661e-4b52-900c-11325d0ea3ac&tenantId=f89944b7-4a4e-4ea7-9156-3299f3411647)
 
 <br> 
 
 # Date and time
 
-- 3-4pm, Wednesday, **22 October 2025**
+- 3-4pm, Wednesday, **22 October 2025**, L207 
 
-- 3-4pm, Wednesday, **05 November 2025**
+- 3-4pm, Wednesday, **05 November 2025**, L207 
 
-- 3-4pm, Wednesday, **26 November 2025**
+- 3-4pm, Wednesday, **26 November 2025**, L207 
 
-- 3-4pm, Wednesday, **21 January 2026**
+- 3-4pm, Wednesday, **21 January 2026**, room TBC
 
-- 3-4pm, Wednesday, **04 February 2026**
+- 3-4pm, Wednesday, **04 February 2026**, room TBC
 
-- 3-4pm, Wednesday, **25 February 2026**
+- 3-4pm, Wednesday, **25 February 2026**, room TBC
 
-- 3-4pm, Wednesday, **18 March 2026**
+- 3-4pm, Wednesday, **18 March 2026**, room TBC
 
-- 3-4pm, Wednesday, **29 April 2026**
+- 3-4pm, Wednesday, **29 April 2026**, room TBC
 
-- 3-4pm, Wednesday, **20 May 2026**
+- 3-4pm, Wednesday, **20 May 2026**, room TBC
 
-- 3-4pm, Wednesday, **10 June 2026**
+- 3-4pm, Wednesday, **10 June 2026**, room TBC
 
 <br>
 
