--- a/20252026.Rmd
+++ b/20252026.Rmd
@@ -28,7 +28,7 @@ output:
 
 # Location
 
-**Paisley Campus** or **online.** Click here to join: [<img src="teams.svg" alt="Join us here"  height="32"/>](https://teams.microsoft.com/l/team/19%3AVgmCyqnnetwBheHqzKxSGVjojm8Wf2At8_X9DBkk2UM1%40thread.tacv2/conversations?groupId=4fee47e7-661e-4b52-900c-11325d0ea3ac&tenantId=f89944b7-4a4e-4ea7-9156-3299f3411647)
+**Paisley Campus** or **online.** Click here to join: [<img src="teams.svg" alt="Join us here"  height="32"/>](https://teams.microsoft.com/l/meetup-join/19%3ameeting_MTQ4Y2RiNzEtODMxYi00MGVhLTlhNDgtYTgzMWI1ZmYxMGZl%40thread.v2/0?context=%7b%22Tid%22%3a%22f89944b7-4a4e-4ea7-9156-3299f3411647%22%2c%22Oid%22%3a%22730b79f5-6f77-4110-9293-ae406b00b086%22%7d)
 
 <br> 
 
