updated dates and main page

--- a/20252026.Rmd
+++ b/20252026.Rmd
@@ -40,19 +40,19 @@ output:
 
 - 3-4pm, Wednesday, **26 November 2025**, L207 
 
-- 3-4pm, Wednesday, **21 January 2026**, room TBC
+- 3-4pm, Wednesday, **21 January 2026**, room TBD
 
-- 3-4pm, Wednesday, **04 February 2026**, room TBC
+- 3-4pm, Wednesday, **04 February 2026**, room TBD
 
-- 3-4pm, Wednesday, **25 February 2026**, room TBC
+- 3-4pm, Wednesday, **25 February 2026**, room TBD
 
-- 3-4pm, Wednesday, **18 March 2026**, room TBC
+- 3-4pm, Wednesday, **18 March 2026**, room TBD
 
-- 3-4pm, Wednesday, **29 April 2026**, room TBC
+- 3-4pm, Wednesday, **29 April 2026**, room TBD
 
-- 3-4pm, Wednesday, **20 May 2026**, room TBC
+- 3-4pm, Wednesday, **20 May 2026**, room TBD
 
-- 3-4pm, Wednesday, **10 June 2026**, room TBC
+- 3-4pm, Wednesday, **10 June 2026**, room TBD
 
 <br>
 
