--- a/index.Rmd
+++ b/index.Rmd
@@ -27,7 +27,7 @@ output:
 
 <br>
 
-The main goal of our journal club is to gather students and researchers within the School of Education and Social Sciences, or more broadly, within the University of the West of Scotland, to **form a community of people interested in issues around Open Science and reproducibility**. We do so by organising regular. monthly meetings throughout the academic year. 
+The main goal of our journal club is to gather students and researchers within the School of Education and Social Sciences, or more broadly, within the University of the West of Scotland, to **form a community of people interested in issues around Open Science and reproducibility**. We do so by organising regular, monthly meetings throughout the academic year. 
 
 During these **hour-long meetings**, we dive into the latest research on improving transparency, replicability, and reproducibility in science by **reading and discussing a specific paper**. This **informal, come-when-you-can gathering** is perfect for anyone curious about open science practices, and it provides a great chance to explore key topics, share insights, and foster a curious and open community. 
 
